Filter related changes, added subtotal in analytics